force-app/main/default/objects/ORDER_D__c/ORDER_D__c.object-meta.xml
<CustomObject>
    <label>주문내역상세</label>
    <nameField>
        <label>주문내역상세 Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>