force-app/main/default/objects/ORDER_D__c/fields/BUDAT__c.field-meta.xml
<CustomField>
    <fullName>BUDAT__c</fullName>
    <label>전표 전기 일자</label>
    <type>Date</type>
</CustomField>