force-app/main/default/objects/ORDER_D__c/fields/EBELN__c.field-meta.xml
<CustomField>
    <fullName>EBELN__c</fullName>
    <label>주문번호</label>
    <length>10</length>
    <type>Text</type>
</CustomField>