force-app/main/default/objects/ORDER_D__c/fields/EBELP__c.field-meta.xml
<CustomField>
    <fullName>EBELP__c</fullName>
    <label>주문항번</label>
    <length>10</length>
    <type>Text</type>
</CustomField>