force-app/main/default/objects/ORDER_D__c/fields/EBELP_R__c.field-meta.xml
<CustomField>
    <fullName>EBELP_R__c</fullName>
    <label>3000to5000 STO품목번호</label>
    <length>10</length>
    <type>Text</type>
</CustomField>