force-app/main/default/objects/ORDER_D__c/fields/EINDT__c.field-meta.xml
<CustomField>
    <fullName>EINDT__c</fullName>
    <label>납품일</label>
    <type>Date</type>
</CustomField>