force-app/main/default/objects/ORDER_D__c/fields/LIFNR__c.field-meta.xml
<CustomField>
    <fullName>LIFNR__c</fullName>
    <label>공급업체</label>
    <length>10</length>
    <type>Text</type>
</CustomField>