force-app/main/default/objects/ORDER_D__c/fields/LOEKZ__c.field-meta.xml
<CustomField>
    <fullName>LOEKZ__c</fullName>
    <label>삭제 표시</label>
    <length>1</length>
    <type>Text</type>
</CustomField>