force-app/main/default/objects/ORDER_D__c/fields/MAKTX__c.field-meta.xml
<CustomField>
    <fullName>MAKTX__c</fullName>
    <label>자재내역</label>
    <length>40</length>
    <type>Text</type>
</CustomField>