force-app/main/default/objects/ORDER_D__c/fields/ORDER_H__c.field-meta.xml
<CustomField>
    <fullName>ORDER_H__c</fullName>
    <label>주문내역</label>
    <referenceTo>ORDER_H__c</referenceTo>
    <relationshipLabel>주문내역상세</relationshipLabel>
    <relationshipName>ORDER_D</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>