force-app/main/default/objects/ORDER_D__c/fields/ORDERDKEY__c.field-meta.xml
<CustomField>
    <fullName>ORDERDKEY__c</fullName>
    <externalId>true</externalId>
    <label>ckwms키</label>
    <length>50</length>
    <type>Text</type>
</CustomField>