force-app/main/default/objects/ORDER_D__c/fields/RETPO__c.field-meta.xml
<CustomField>
    <fullName>RETPO__c</fullName>
    <label>반품품목</label>
    <length>1</length>
    <type>Text</type>
</CustomField>