force-app/main/default/objects/ORDER_D__c/validationRules/ProhibitConfirmOrderChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ProhibitConfirmOrderChange</fullName>
    <active>true</active>
    <description>입고확정 후 변경방지</description>
    <errorConditionFormula>AND (
ISPICKVAL(ORDER_H__r.CONFIRM__c, &quot;Y&quot;),
ISCHANGED(MENGE__c)
)</errorConditionFormula>
    <errorDisplayField>MENGE__c</errorDisplayField>
    <errorMessage>확정된 입고내역은 변경할 수 없습니다.</errorMessage>
</ValidationRule>